@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-22T08:31:06Z",
+  "timestamp" : "2022-11-23T01:48:35Z",
   "count_outdated" : 891,
   "uniques_outdated" : 468,
-  "count" : 910,
+  "count" : 911,
   "uniques" : 480,
   "clones" : [
     {
@@ -70,8 +70,8 @@
     },
     {
       "timestamp": "2022-11-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
