@@ -1,5 +1,5 @@
 {
-  "count": 19,
+  "count": 20,
   "uniques": 3,
   "clones": [
     {
@@ -49,7 +49,7 @@
     },
     {
       "timestamp": "2022-11-22T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
